@@ -18,9 +18,9 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 
-import javax.annotation.PreDestroy;
 import javax.sql.DataSource;
 
+import jakarta.annotation.PreDestroy;
 import org.springframework.retry.support.RetryTemplate;
 
 import com.netflix.conductor.common.metadata.events.EventHandler;
@@ -150,8 +150,10 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
     @Override
     public Optional<WorkflowDef> getLatestWorkflowDef(String name) {
         final String GET_LATEST_WORKFLOW_DEF_QUERY =
-                "SELECT json_data FROM meta_workflow_def WHERE NAME = ? AND "
-                        + "version = latest_version";
+                """
+                SELECT json_data FROM meta_workflow_def WHERE NAME = ? AND \
+                version = latest_version\
+                """;
 
         return Optional.ofNullable(
                 queryWithTransaction(
@@ -186,9 +188,9 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
                             q -> {
                                 if (!q.addParameter(name).addParameter(version).executeDelete()) {
                                     throw new NotFoundException(
-                                            String.format(
-                                                    "No such workflow definition: %s version: %d",
-                                                    name, version));
+                                                    
+                                                                    "No such workflow definition: %s version: %d".formatted(
+                                                                    name, version));
                                 }
                             });
                     // reset latest version based on remaining rows for this workflow
@@ -223,7 +225,10 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
 
     public List<WorkflowDef> getAllLatest() {
         final String GET_ALL_LATEST_WORKFLOW_DEF_QUERY =
-                "SELECT json_data FROM meta_workflow_def WHERE version = " + "latest_version";
+                """
+                SELECT json_data FROM meta_workflow_def WHERE version = \
+                latest_version\
+                """;
 
         return queryWithTransaction(
                 GET_ALL_LATEST_WORKFLOW_DEF_QUERY, q -> q.executeAndFetch(WorkflowDef.class));
@@ -231,7 +236,10 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
 
     public List<WorkflowDef> getAllVersions(String name) {
         final String GET_ALL_VERSIONS_WORKFLOW_DEF_QUERY =
-                "SELECT json_data FROM meta_workflow_def WHERE name = ? " + "ORDER BY version";
+                """
+                SELECT json_data FROM meta_workflow_def WHERE name = ? \
+                ORDER BY version\
+                """;
 
         return queryWithTransaction(
                 GET_ALL_VERSIONS_WORKFLOW_DEF_QUERY,
@@ -243,8 +251,10 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
         Preconditions.checkNotNull(eventHandler.getName(), "EventHandler name cannot be null");
 
         final String INSERT_EVENT_HANDLER_QUERY =
-                "INSERT INTO meta_event_handler (name, event, active, json_data) "
-                        + "VALUES (?, ?, ?, ?)";
+                """
+                INSERT INTO meta_event_handler (name, event, active, json_data) \
+                VALUES (?, ?, ?, ?)\
+                """;
 
         withTransaction(
                 tx -> {
@@ -273,9 +283,11 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
 
         // @formatter:off
         final String UPDATE_EVENT_HANDLER_QUERY =
-                "UPDATE meta_event_handler SET "
-                        + "event = ?, active = ?, json_data = ?, "
-                        + "modified_on = CURRENT_TIMESTAMP WHERE name = ?";
+                """
+                UPDATE meta_event_handler SET \
+                event = ?, active = ?, json_data = ?, \
+                modified_on = CURRENT_TIMESTAMP WHERE name = ?\
+                """;
         // @formatter:on
 
         withTransaction(
@@ -396,7 +408,10 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
      */
     private Boolean workflowExists(Connection connection, WorkflowDef def) {
         final String CHECK_WORKFLOW_DEF_EXISTS_QUERY =
-                "SELECT COUNT(*) FROM meta_workflow_def WHERE name = ? AND " + "version = ?";
+                """
+                SELECT COUNT(*) FROM meta_workflow_def WHERE name = ? AND \
+                version = ?\
+                """;
 
         return query(
                 connection,
@@ -414,7 +429,10 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
      */
     private Optional<Integer> getLatestVersion(Connection tx, String name) {
         final String GET_LATEST_WORKFLOW_DEF_VERSION =
-                "SELECT max(version) AS version FROM meta_workflow_def WHERE " + "name = ?";
+                """
+                SELECT max(version) AS version FROM meta_workflow_def WHERE \
+                name = ?\
+                """;
 
         Integer val =
                 query(
@@ -445,7 +463,10 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
      */
     private void updateLatestVersion(Connection tx, String name, int version) {
         final String UPDATE_WORKFLOW_DEF_LATEST_VERSION_QUERY =
-                "UPDATE meta_workflow_def SET latest_version = ? " + "WHERE name = ?";
+                """
+                UPDATE meta_workflow_def SET latest_version = ? \
+                WHERE name = ?\
+                """;
 
         execute(
                 tx,
@@ -455,7 +476,10 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
 
     private void insertOrUpdateWorkflowDef(Connection tx, WorkflowDef def) {
         final String INSERT_WORKFLOW_DEF_QUERY =
-                "INSERT INTO meta_workflow_def (name, version, json_data) VALUES (?," + " ?, ?)";
+                """
+                INSERT INTO meta_workflow_def (name, version, json_data) VALUES (?,\
+                 ?, ?)\
+                """;
 
         Optional<Integer> version = getLatestVersion(tx, def.getName());
         if (!workflowExists(tx, def)) {
@@ -470,9 +494,11 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
         } else {
             // @formatter:off
             final String UPDATE_WORKFLOW_DEF_QUERY =
-                    "UPDATE meta_workflow_def "
-                            + "SET json_data = ?, modified_on = CURRENT_TIMESTAMP "
-                            + "WHERE name = ? AND version = ?";
+                    """
+                    UPDATE meta_workflow_def \
+                    SET json_data = ?, modified_on = CURRENT_TIMESTAMP \
+                    WHERE name = ? AND version = ?\
+                    """;
             // @formatter:on
 
             execute(
